    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11859. PseudoAuthenticationHandler fails with httpcomponents v4.4.
    (Eugene Koifman via jitendra)

    HADOOP-12052 IPC client downgrades all exception types to IOE, breaks
    callers trying to use them. (Brahma Reddy Battula via stevel)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11959. WASB should configure client side socket timeout in storage
    client blob request options. (Ivan Mitic via cnauroth)

    HADOOP-11934. Use of JavaKeyStoreProvider in LdapGroupsMapping causes
    infinite loop. (Larry McCay via cnauroth)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11973. Ensure ZkDelegationTokenSecretManager namespace znodes get
    created with ACLs. (Gregory Chanan via asuresh)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES
