@@ -32,6 +32,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12052 IPC client downgrades all exception types to IOE, breaks
     callers trying to use them. (Brahma Reddy Battula via stevel)
 
+    HADOOP-12073. Azure FileSystem PageBlobInputStream does not return -1 on
+    EOF. (Ivan Mitic via cnauroth)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
